<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="casual"
            android:text="level"
            android:textSize="18dp" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:progress="35"
            android:progressTint="#F44336" />

        <TextView
            android:id="@+id/level"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="casual"
            android:text="1 / 3"
            android:textSize="18dp" />
    </LinearLayout>


    <TextView
        android:id="@+id/grade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:padding="10dp"
        android:text="0"
        android:textColor="#2196F3"
        android:textSize="26dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="casual"
        android:text="SCORE"
        android:textColor="#2196F3"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/question_v"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:background="#1A2196F3"
        android:padding="20dp"
        android:text="@string/easy_q_1"
        android:textAlignment="center"
        android:textSize="18dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/true_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:layout_weight="0.5"
            android:backgroundTint="#4CAF50"
            android:padding="20dp"
            android:text="True"
            android:textColor="#fff" />

        <Button
            android:id="@+id/false_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:layout_weight="0.5"
            android:backgroundTint="#F44336"
            android:padding="20dp"
            android:text="false"
            android:textColor="#fff" />
    </LinearLayout>

    <Button
        android:id="@+id/cheat_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:backgroundTint="#CDDC39"
        android:text="@string/cheat_button"
        android:textColor="#fff" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/previous_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="25dp"
            android:backgroundTint="#1A2196F3"
            android:contentDescription="@string/previous_button"
            android:padding="20dp"
            android:src="@drawable/back_ios_24" />

        <ImageButton
            android:id="@+id/reset_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="25dp"
            android:backgroundTint="#03A9F4"
            android:contentDescription="@string/reset_button"
            android:padding="20dp"
            android:src="@drawable/refresh_24"
            android:visibility="invisible" />

        <ImageButton
            android:id="@+id/next_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="25dp"
            android:backgroundTint="#1A2196F3"
            android:contentDescription="@string/next_button"
            android:padding="20dp"
            android:src="@drawable/next_ios_24" />
    </LinearLayout>


</LinearLayout>